# tempofact

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
tempofact/: __init__.py
