# ******************************************************************************
#
# tempofact, printable time artifacts
#
# Copyright 2024 Jeremy A Gray <gray@flyquackswim.com>.
#
# All rights reserved.
#
# SPDX-License-Identifier: GPL-3.0-or-later
#
# ******************************************************************************

[metadata]

author = Jeremy A Gray
author_email = gray@flyquackswim.com
description = printable time artifacts
license = GPL-3.0-or-later
license_files = LICENSE.rst
long_description = file: README.rst
long_description_content_type = text/x-rst
maintainer = Jeremy A Gray
maintainer_email = gray@flyquackswim.com
name = tempofact
url = https://github.com/jeremyagray/tempofact
version = 0.1.0

project_urls =
  Issues = https://github.com/jeremyagray/tempofact/issues
  Documentation = https://tempofact.readthedocs.io/
  Repository = https://github.com/jeremyagray/tempofact

classifiers =
  Development Status :: 1 - Planning
  Intended Audience :: End Users/Desktop
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Programming Language :: Python :: 3.12

[options]

packages = tempofact

tests_require =
  black
  factory-boy
  flake8
  flake8-docstrings
  isort
  pytest
  pytest-cov
